--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,7 @@
             <%= link_to '投稿フォーム', "#" %>
           </li>
           <li class="">
-            <!-- ↓以下のコードは、5章で正しいroutingに書き直します。 -->
-            <%= link_to 'マイページ', "#" %>
+            <%= link_to 'マイページ', user_path(current_user.id) %>
           </li>
         <% else %>
           <li class="">
