--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,13 +3,13 @@
     <div class="col-md-4 col-md-offset-4">
       <div class="form-user style-1 rounded has-shadow-1">
         <div class="form-header text-center">
-            <h2 class="form-header-title">プロフィール編集</h2>
+            <h2 class="form-header-title">User info</h2>
         </div>
         <div class="form-body">
           <%= form_for(@user) do |f| %>
             <div class="form-group has-icon">
               <label class="control-label sr-only" for="inputEmail">Name</label>
-              <%= f.text_field :name, autofocus: true, class:"form-control", id:"inputEmail" %>
+              <%= f.text_field :name, autofocus: true, class:"form-control", id:"inputEmail", placeholder:"名前"%>
               <span class="fa fa-user form-control-icon" aria-hidden="true"></span>
             </div>
             <div class="form-group has-icon">
