--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,24 @@
-<% @users.each do |user| %>
-  <%= user.name %>
-<% end %>
+<div class="container">
+  <div class="row">
+  	<div class="col-8">
+  	  <h2>Users</h2>
+	  <table width="100%">
+	    <tr>
+	  	  <th width="20%">image</th>
+	  	  <th width="60%">name</th>
+	  	  <th width="20%"></th>
+	    </tr>
+	    <% @users.each do |user| %>
+	      <tr>
+	  	    <td>
+	  	      <%= attachment_image_tag user, :profile_image, :fill, 20, 20, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
+	  	    </td>
+	  	    <td><%= user.name %></td>
+	  	    <td><%= link_to 'Show', user_path(user) %></td>
+	  	  </tr>
+	    <% end %>
+	  </table>
+	</div>
+  </div>
+</div>
+
