--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,3 +1,11 @@
-<h1>Home#top</h1>
-<p>Find me in app/views/home/top.html.erb</p>
-<%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+<div class="col-md-offset-3 col-md-6">
+  <h1>welcome to <span class="glyphicon glyphicon-book books"></span>Bookers !!</h1>
+  In <span class="glyphicon glyphicon-book books"></span>Bookers,<br>
+  <p>you can share and exchange your opinions , inpressions , and emotions<br> about varioius books!</p>
+  <div class="btn-wrapper">
+  	<div class="row">
+      <p><%= link_to "Log in", new_user_session_path, class: "btn btn-info" %></p>
+      <p class=""><%= link_to "Sign Up", new_user_registration_path, class: "btn btn-success" %></p>
+    </div>
+  </div>
+</div>
