--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,28 +10,51 @@
   </head>
 
   <body>
-    <div id="slidemenu">
-      <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="zoomIn fadeIn fadeInUp fadeIn">
-        <% if user_signed_in? %>
-          <li class="">
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-          </li>
-          <li class="">
-            <%= link_to '投稿フォーム', "#" %>
-          </li>
-          <li class="">
-            <%= link_to 'マイページ', user_path(current_user.id) %>
-          </li>
-        <% else %>
-          <li class="">
-            <%= link_to "新規登録", new_user_registration_path %>
-          </li>
-          <li class="">
-            <%= link_to "ログイン", new_user_session_path %>
-          </li>
-        <% end %>
-      </ul>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <nav class="nav navbar-nav navbar-left">
+          <span style="color: #fff">Bookers</span>
+        </nav>
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+              <li class="">
+                <%= link_to 'Home', user_path(current_user.id), class: "glyphicon glyphicon-home home" %>
+              </li>
+              <li class="">
+                <%= link_to 'Users', users_path , class: "glyphicon glyphicon-user users" %>
+              </li>
+              <li class="">
+                <%= link_to 'Books', books_path, class: "glyphicon glyphicon-book books" %>
+              </li>
+              <li class="">
+                <%= link_to "logout", destroy_user_session_path, method: :delete, class: "glyphicon glyphicon-log-out logout" %>
+              </li>
+            <% else %>
+              <li class="">
+                <%= link_to 'Home', root_path, class: "glyphicon glyphicon-home home" %>
+              </li>
+              <li class="">
+                <%= link_to 'About', 'home/about', class: "glyphicon glyphicon-link about" %>
+              </li>
+              <li class="">
+                <%= link_to "sign up", new_user_registration_path, class: "glyphicon glyphicon-edit sign_up" %>
+              </li>
+              <li class="">
+                <%= link_to "login", new_user_session_path, class: "glyphicon glyphicon-log-in sign_in" %>
+              </li>
+            <% end %>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="body">
+      <div class="container">
+        <!-- ここにメッセージ表示 -->
+        <div class="row">
+          <%= yield %>
+        </div>
+      </div>
     </div>
-    <%= yield %>
   </body>
 </html>
