--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,22 @@
-<div class="container-fluid masonry-container">
-	<div class="row">
-	  <div class="col-md-8 col-sm-offset-2">
-	    <div class="masonry-wrapper-cols">
-	      <div class="profile-container">
-		    <h3 class="profile-name"><%= @user.name %><%= @user.email %></h3>
-		    <h3 class="profile-name"><%= @user.introduction %></h3>
-		    <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
-		  </div>
-	    </div>
-	  </div>
+<div class="container">
+  <div class="row">
+  	<div class="col-xs-3">
+      <%= render 'users/info', user: @user, book: @book %>
+    </div>
+    <div class="col-xs-9">
+	  <h2>Books</h2>
+	  <table width="100%">
+	    <tr>
+	      <th>Title</th>
+		  <th>Opinion</th>
+	    </tr>
+	    <%= @books.each do |book| %>
+	      <tr>
+		    <td><%= link_to book.title, book_path(book) %></td>
+		    <td><%= book.body %></td>
+		  </tr>
+	    <% end %>
+	  </table>
 	</div>
+  </div>
 </div>
-
