--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,7 @@
 <h1>Book detail</h1>
-<div style="border: 1px solid #eee"></div>
 <table width="100%">
   <tr>
-  	<td width="50%"><%= attachment_image_tag @user, :profile_image, :fill, 10, 10, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %><br><%= @user.name %></td>
+  	<td width="50%"><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %><br><%= link_to @user.name, user_path(@user) %></td>
   	<td width="25%"><%= link_to @book.title, book_path(@book) %></td>
   	<td width="25%"><%= @book.body %></td>
   </tr>
