--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,33 +1,21 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-4 col-md-offset-4">
-      <div class="form-user style-1 rounded has-shadow-1">
-        <div class="form-header text-center">
-            <h2 class="form-header-title">User info</h2>
-        </div>
-        <div class="form-body">
-          <%= form_for(@user) do |f| %>
-            <div class="form-group has-icon">
-              <label class="control-label sr-only" for="inputEmail">Name</label>
-              <%= f.text_field :name, autofocus: true, class:"form-control", id:"inputEmail", placeholder:"名前"%>
-              <span class="fa fa-user form-control-icon" aria-hidden="true"></span>
-            </div>
-            <div class="form-group has-icon">
-              <div class="user-edit-image">
-                <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, class: "img-circle pull-left profile-thumb", fallback: "no_image.jpg" %>
-              </div>
-              <label class="control-label sr-only" for="user_profile_image">ProfileImage</label>
-              <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "user-edit-form" %>
-            </div>
-            <div class="form-group has-icon">
-              <label class="control-label sr-only" for="inputEmail">Introduction</label>
-              <%= f.text_field :introduction, class:"form-control", id:"inputEmail" %>
-              <span class="fa fa-user form-control-icon" aria-hidden="true"></span>
-            </div>
-            <%= f.submit "変更を保存", class:"btn btn-lg btn-block btn-base-1 mt-20" %>
-          <% end %>
-        </div>
-      </div>
+<div class="col-xs-3">
+  <h2>User info</h2>
+  <%= form_for(@user) do |f| %>
+    <div class="form-group has-icon">
+      <%= f.label :name, "name",  class: 'control-label', for: "name" %>
+      <%= f.text_field :name, autofocus: true, class:"form-control", id:"inputEmail" %>
+      <span class="fa fa-user form-control-icon" aria-hidden="true"></span>
     </div>
-  </div>
+    <div class="form-group has-icon">
+      <%= f.label :profile_image, "image",  class:'control-label', for:"profile_image" %>
+      <%= f.attachment_field :profile_image, class: "user-edit-form" %>
+    </div>
+    <div class="form-group has-icon">
+      <label class="control-label sr-only" for="inputEmail">Introduction</label>
+      <%= f.label :introduction, "introduction",  class: 'control-label', for: "introduction" %>
+      <%= f.text_area :introduction, class:"form-control" %>
+      <span class="fa fa-user form-control-icon" aria-hidden="true"></span>
+    </div>
+    <%= f.submit "update user", class:"btn btn-default" %>
+  <% end %>
 </div>
