--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,33 +1,26 @@
-<h1>Editing Book</h1>
-<%= form_for(@book) do |f| %>
+<div class="col-xs-6 col-xs-offset-3">
+  <h1>Editing Book</h1>
   <% if @book.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @post_image.errors.count %>件のエラーが発生しました。</h2>
-      <ul>
-      <% @post_image.errors.full_messages.each do |message| %>
+  <div id="error_explanation" class="alert alert-danger">
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="form-group has-icon">
-        <label class="control-label sr-only">Title</label>
-        <%= f.text_field :title, class:"form-control" %>
-        <span class="fa fa-building form-control-icon" aria-hidden="true"></span>
-      </div>
-    </div>
+    </ul>
   </div>
-  <div class="row">
-    <div class="col-sm-6">
+<% end %>
+  <%= form_for(@book) do |f| %>
+    <div class="form-group has-icon">
+      <%= f.label :title %>
+      <%= f.text_field :title, class:"form-control" %>
+
+    </div>
       <div class="form-group has-icon">
-        <label class="control-label sr-only">Body</label>
+        <%= f.label :body %>
         <%= f.text_field :body, class:"form-control" %>
-        <span class="fa fa-building form-control-icon" aria-hidden="true"></span>
+
       </div>
-    </div>
-  </div>
-  <%= f.submit "送信", class:"btn btn-lg btn-block btn-base-1 mt-20" %>
+    <%= f.submit "送信", class:"btn btn-primary" %>
 <% end %>
 <%= link_to "show", book_path(@book) %> | <%= link_to "back", books_path %>
+</div>
