--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,15 +1,20 @@
+<div class="col-xs-3">
+  <%= render 'users/info', user: @user, book: @book %>
+</div>
+<div class="col-xs-9">
 <h2>Books</h2>
-  <table width="100%">
+  <table class="table">
   	<tr>
   	  <th></th>
   	  <th>Title</th>
   	  <th>Opinion</th>
   	</tr>
-  	<%= @books.each do |book| %>
+  	<% @books.each do |book| %>
   	  <tr>
-  	  	<td><%= attachment_image_tag @user, :profile_image, :fill, 20, 20, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %></td>
+  	  	<td><%= attachment_image_tag @user, :profile_image, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg", size: "60x60" %></td>
   	  	<td><%= link_to book.title, book_path(book) %></td>
   	  	<td><%= book.body %></td>
   	  </tr>
     <% end %>
   </table>
+</div>
