--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -4,8 +4,10 @@
   <p>you can share and exchange your opinions , inpressions , and emotions<br> about varioius books!</p>
   <div class="btn-wrapper">
   	<div class="row">
-      <p><%= link_to "Log in", new_user_session_path, class: "btn btn-info" %></p>
-      <p class=""><%= link_to "Sign Up", new_user_registration_path, class: "btn btn-success" %></p>
+  	  <div class="col-xs-10 col-xs-offset-1">
+	    <p style="margin-bottom: 0px"><%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-block" %></p>
+	    <p><%= link_to "Sign Up", new_user_registration_path, class: "btn btn-success btn-block btn-base-1 mt-20" %></p>
+      </div>
     </div>
   </div>
 </div>
