--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -5,7 +5,7 @@
   <%= attachment_image_tag user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
   <div class="row">
     <div class="col-xs-12">
-      <table width="100%">
+      <table class="table" width="100%">
         <tr></tr>
         <tr>
           <td>name</td>
@@ -19,9 +19,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
-      <button class="btn btn-default"><%= link_to "edit", edit_user_path(user) %></button>
-    </div>
+    <p><%= link_to "", edit_user_path(user), class:"col-xs-12 btn btn-default glyphicon glyphicon-wrench" %></p>
   </div>
   <div class="info-edit">
     <div class="">
@@ -30,15 +28,15 @@
   <h2>New book</h2>
   <%= form_for(book) do |f| %>
     <div class="form-group has-icon">
-      <label class="control-label sr-only">Title</label>
+      <%= f.label :title %>
       <%= f.text_field :title, class:"form-control" %>
       <span class="fa fa-building form-control-icon" aria-hidden="true"></span>
     </div>
     <div class="form-group has-icon">
-      <label class="control-label sr-only">Body</label>
+      <%= f.label :body %>
       <%= f.text_field :body, class:"form-control" %>
       <span class="fa fa-building form-control-icon" aria-hidden="true"></span>
     </div>
-    <%= f.submit "送信", class:"btn btn-lg btn-block btn-base-1 mt-20" %>
+    <%= f.submit "create book", class:"btn btn-primary btn-block btn-base-1 mt-20" %>
   <% end %>
 
