[Start]fix final two error

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,24 +1,28 @@
 <div class="col-xs-3">
-  <%= render 'users/info', user: @user2, book: @book2 %>
+  <%= render 'users/info', user: @user, book: @book %>
 </div>
 <div class="col-xs-9">
   <h1>Book detail</h1>
-  <table width="100%">
+  <table class="table">
     <tr>
-    	<% if current_user.id == @book.user_id %>
-    	  <td width="20%"><%= attachment_image_tag @user, :profile_image, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg", size: "60x60" %><br><%= link_to @user.name, user_path(@user) %></td>
-    	  <td width="20%"><%= link_to @book.title, book_path(@book) %></td>
-    	  <td width="20%"><%= @book.body %></td>
+    	<% if current_user.id == @book2.user_id %>
+    	  <td width="20%"><%= attachment_image_tag @user2, :profile_image, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg", size: "60x60" %><br><%= link_to @user2.name, user_path(@user2) %></td>
+    	  <td width="20%"><%= link_to @book2.title, book_path(@book2) %></td>
+    	  <td width="20%"><%= @book2.body %></td>
     	  <td width="20%">
-    	  	<p><%= link_to "edit", edit_book_path(@book), class:"btn btn-success" %></<p>
+    	  	<p><%= link_to "edit", edit_book_path(@book2), class:"btn btn-success" %></<p>
     	  </td>
     	  <td width="20%">
-    	  	<p><%= link_to "destroy", book_path(@book), method: :delete, class:"btn btn-danger" %></p>
+    	  	<p><%= link_to "destroy", book_path(@book2), method: :delete, class:"btn btn-danger" %></p>
     	  </td>
     	<% else %>
-    	  <td width="50%"><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %><br><%= link_to @user.name, user_path(@user) %></td>
-    	  <td width="25%"><%= link_to @book.title, book_path(@book) %></td>
-    	  <td width="25%"><%= @book.body %></td>
+    	  <td width="50%">
+          <%= link_to user_path(@book2.user_id) do %>
+            <%= attachment_image_tag @user2, :profile_image, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg", size: "60x60" %><br><%= @user2.name %>
+          <% end %>
+        </td>
+    	  <td width="25%"><%= link_to @book2.title, book_path(@book2) %></td>
+    	  <td width="25%"><%= @book2.body %></td>
     	<% end %>
     </tr>
   </table>
