--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,14 +1,14 @@
 <div class="col-xs-6 col-xs-offset-3">
   <h1>Editing Book</h1>
   <% if @book.errors.any? %>
-  <div id="error_explanation" class="alert alert-danger">
-    <ul>
-      <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
+    <div id="error_explanation" class="alert alert-danger">
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %>というerror</li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
   <%= form_for(@book) do |f| %>
     <div class="form-group has-icon">
       <%= f.label :title %>
