--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,12 @@
+<% if @user.errors.any? %>
+  <div id="error_explanation" class="alert alert-danger">
+    <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %>というerror</li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
 <div class="col-xs-3">
   <h2>User info</h2>
   <%= form_for(@user) do |f| %>
