--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,12 @@
+<% if @book.errors.any? %>
+  <div id="error_explanation" class="alert alert-danger">
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %>というerror</li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
 <div class="col-xs-3">
   <%= render 'users/info', user: @user, book: @book %>
 </div>
