--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,23 @@
+<% if @book.errors.any? %>
+  <div id="error_explanation" class="alert alert-danger">
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %>というerror</li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
 <div class="col-xs-3">
   <%= render 'users/info', user: @user, book: @book %>
 </div>
 <div class="col-xs-9">
   <h2>Books</h2>
-  <table width="100%">
+  <table class="table">
     <tr>
       <th>Title</th>
 	  <th>Opinion</th>
     </tr>
-    <%= @books.each do |book| %>
+    <% @books.each do |book| %>
       <tr>
 	    <td><%= link_to book.title, book_path(book) %></td>
 	    <td><%= book.body %></td>
