--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 <div class="col-xs-3">
-  <%= render 'users/info', user: @user, book: @book %>
+  <%= render 'users/info', user: @user2, book: @book %>
 </div>
 <div class="col-xs-9">
   <h1>Book detail</h1>
