--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
                 <%= link_to 'Home', root_path, class: "glyphicon glyphicon-home home" %>
               </li>
               <li class="">
-                <%= link_to 'About', 'home/about', class: "glyphicon glyphicon-link about" %>
+                <%= link_to 'About', home_about_path, class: "glyphicon glyphicon-link about" %>
               </li>
               <li class="">
                 <%= link_to "sign up", new_user_registration_path, class: "glyphicon glyphicon-edit sign_up" %>
