--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -5,7 +5,7 @@
   <%= attachment_image_tag user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
   <div class="row">
     <div class="col-xs-12">
-      <table class="table" width="100%">
+      <table class="table">
         <tr></tr>
         <tr>
           <td>name</td>
