--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,7 +12,7 @@
 </div>
 <div class="col-xs-9">
   <h2>Users</h2>
-  <table width="100%">
+  <table class="table">
     <tr>
   	  <th width="20%">image</th>
   	  <th width="60%">name</th>
